WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300952
REGRESSION (
295783@main
): [iOS] Caret rect in fixed-position containers may appear in the wrong place when the page's scroll offset is very large
https://bugs.webkit.org/show_bug.cgi?id=300952
Summary
REGRESSION (295783@main): [iOS] Caret rect in fixed-position containers may a...
Wenson Hsieh
Reported
2025-10-16 20:05:36 PDT
rdar://162158640
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-10-16 20:16:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52531
EWS
Comment 2
2025-10-17 08:26:23 PDT
Committed
301719@main
(46bfd8e48d38): <
https://commits.webkit.org/301719@main
> Reviewed commits have been landed. Closing PR #52531 and removing active labels.
Simon Fraser (smfr)
Comment 3
2025-10-17 09:57:47 PDT
***
Bug 300690
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug